[gd_scene load_steps=7 format=2]

[ext_resource path="res://level.gd" type="Script" id=2]
[ext_resource path="res://Maze/Maze.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]

[sub_resource type="Environment" id=2]
background_mode = 1
ambient_light_color = Color( 0.639216, 0.101961, 0.101961, 1 )
ambient_light_energy = 0.05

[sub_resource type="Curve3D" id=3]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -25.0859, 0, 27.2808, 0, 0, 0, 0, 0, 0, -25.0859, 0, 22.0546, 0, 0, 0, 0, 0, 0, -20.6685, 0, 22.0803, 0, 0, 0, 0, 0, 0, -20.6959, 0, 15.156, 0, 0, 0, 0, 0, 0, -25.638, 0, 15.1908, 0, 0, 0, 0, 0, 0, -25.525, 0, 8.75304, 0, 0, 0, 0, 0, 0, -20.4426, 0, 8.86599, 0, 0, 0, 0, 0, 0, -20.4868, 0, -2.82222, 0, 0, 0, 0, 0, 0, -25.7509, 0, -2.76709, 0, 0, 0, 0, 0, 0, -25.7509, 0, -9.31776, 0, 0, 0, 0, 0, 0, -20.0687, 0, -9.30273, 0, 0, 0, 0, 0, 0, -19.9908, 0, -16.2073, 0, 0, 0, 0, 0, 0, -25.7509, 0, -16.0943, 0, 0, 0, 0, 0, 0, -25.7509, 0, -27.9533, 0, 0, 0, 0, 0, 0, -8.58363, 0, -27.9533, 0, 0, 0, 0, 0, 0, -8.58363, 0, -21.9673, 0, 0, 0, 0, 0, 0, -3.16239, 0, -22.0803, 0, 0, 0, 0, 0, 0, -2.92674, 0, -28.7443, 0, 0, 0, 0, 0, 0, 2.82356, 0, -28.6309, 0, 0, 0, 0, 0, 0, 2.71758, 0, -21.8457, 0, 0, 0, 0, 0, 0, 9.40714, 0, -21.6366, 0, 0, 0, 0, 0, 0, 9.48717, 0, -28.405, 0, 0, 0, 0, 0, 0, 26.5415, 0, -28.405, 0, 0, 0, 0, 0, 0, 26.5415, 0, -16.0943, 0, 0, 0, 0, 0, 0, 19.2324, 0, -15.9923, 0, 0, 0, 0, 0, 0, 19.0873, 0, -9.09187, 0, 0, 0, 0, 0, 0, 25.2948, 0, -9.09369, 0, 0, 0, 0, 0, 0, 25.1862, 0, 1.75061, 0, 0, 0, 0, 0, 0, 20.7814, 0, 1.86355, 0, 0, 0, 0, 0, 0, 20.6685, 0, 8.97893, 0, 0, 0, 0, 0, 0, 25.9768, 0, 8.86599, 0, 0, 0, 0, 0, 0, 25.9768, 0, 14.4002, 0, 0, 0, 0, 0, 0, 14.8424, 0, 14.3198, 0, 0, 0, 0, 0, 0, 14.7955, 0, 27.2756, 0, 0, 0, 0, 0, 0, -25.0859, 0, 27.2808 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="Curve3D" id=4]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, 8.80952, 0, 21.5156, 0, 0, 0, 0, 0, 0, 9.0354, 0, 16.0943, 0, 0, 0, 0, 0, 0, -15.1343, 0, 16.0943, 0, 0, 0, 0, 0, 0, -15.2472, 0, -4.23534, 0, 0, 0, 0, 0, 0, -8.80952, 0, -4.23534, 0, 0, 0, 0, 0, 0, -8.92245, 0, -16.0943, 0, 0, 0, 0, 0, 0, 8.92246, 0, -16.0943, 0, 0, 0, 0, 0, 0, 8.80952, 0, 3.78358, 0, 0, 0, 0, 0, 0, 2.93651, 0, 3.78358, 0, 0, 0, 0, 0, 0, 3.04945, 0, 8.52716, 0, 0, 0, 0, 0, 0, 8.69658, 0, 8.52716, 0, 0, 0, 0, 0, 0, 8.80952, 0, 21.5156 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
}

[node name="World" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1769, 0 )
script = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 4 )]
transform = Transform( -0.499982, 0, -0.003358, 0, 0.4, 0, 0.0041975, 0, -0.399986, 24.1613, 2.01, 23.9902 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 79.1449, 0 )

[node name="CoinSpawnOuter" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.61902, 2.02287 )
curve = SubResource( 3 )

[node name="CoinSpawnLocation" type="PathFollow" parent="CoinSpawnOuter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -25.0859, 0, 27.2808 )

[node name="CoinSpawnInner" type="Path" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.32725, 0 )
curve = SubResource( 4 )

[node name="CoinSpawnLocation" type="PathFollow" parent="CoinSpawnInner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.80952, 0, 21.5156 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.126303, 0.991992, 0, -0.991992, 0.126303, 0, 9.35456, 0 )
visible = false

[node name="Maze" parent="." instance=ExtResource( 3 )]

[connection signal="player_dead" from="Player" to="." method="_on_Player_player_dead"]
